@@ -1,10 +1,12 @@
 0.3.10
 - sql
     - got connection-bound metadata to work with implicit execution
-    - cleanup to connection-bound sessions, SessionTransaction
     - foreign key specs can have any chararcter in their identifiers
      [ticket:667]
-    
+    - added commutativity-awareness to binary clause comparisons to
+      each other, improves ORM lazy load optimization [ticket:664]
+- orm
+    - cleanup to connection-bound sessions, SessionTransaction
 - postgres
     - fixed max identifier length (63) [ticket:571]
 
